# datastudio

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  TODO.md  main.py  pyproject.toml  skills-lock.json
.devcontainer/: Dockerfile  claude-settings.json  devcontainer.json  post-create.sh  setup-claude.sh  statusline-command.sh
.devcontainer/config/claude/: settings.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/scripts/: gen-catalog-prompt.ts
frontend/src/: App.test.tsx  App.tsx  catalog-prompt.test.ts  catalog.ts  crossFilter.test.ts  crossFilter.ts  dashboardFilters.test.ts  dashboardFilters.ts  draftStorage.ts  errors.test.ts  errors.ts  format.test.ts  format.ts  main.tsx  registry.test.tsx  registry.tsx  routes.test.ts  routes.ts  routing.test.tsx  session.ts  test-setup.ts  types.ts
frontend/src/components/: ArtifactGallery.test.tsx  ArtifactGallery.tsx  ArtifactView.tsx  ChartJsView.test.tsx  ChartJsView.tsx  Composer.test.tsx  Composer.tsx  DashboardCanvas.test.tsx  DashboardCanvas.tsx  DashboardFilterBar.test.tsx  DashboardFilterBar.tsx  FilterMultiSelect.tsx  MessageList.tsx  PageNotice.tsx  Panels.test.tsx  Panels.tsx  ProgressChecklist.test.tsx  ProgressChecklist.tsx  Sidebar.tsx  VersionHistory.tsx  WidgetEmptyState.test.tsx  WidgetEmptyState.tsx  WidgetFrame.test.tsx  WidgetFrame.tsx  chartTheme.ts
frontend/src/components/composer/: MentionField.test.tsx  MentionField.tsx  MentionMenu.test.tsx  MentionMenu.tsx  PlainTextField.tsx  composerDraft.test.ts  composerDraft.ts  composerField.ts  composerSchema.test.ts  composerSchema.ts  editorState.ts  matching.ts  mentionQuery.test.ts  mentionQuery.ts  pasteTableAsPlainText.test.ts  pasteTableAsPlainText.ts  placeholderPlugin.ts  tableMention.test.ts  tableMention.ts
frontend/src/hooks/: useArtifacts.ts  useChatSession.test.ts  useChatSession.ts  useConversations.ts  useCrossFilter.test.tsx  useCrossFilter.ts  useDocumentTitle.ts  useDraft.ts  usePopover.test.tsx  usePopover.ts  useSchemaTables.test.ts  useSchemaTables.ts  useStuckToTop.test.tsx  useStuckToTop.ts  useTableColumns.test.ts  useTableColumns.ts
frontend/src/pages/: ArtifactPage.tsx  ChatPage.tsx  GalleryPage.tsx  NotFoundPage.tsx
frontend/src/styles/: app.css  scrollbars.css  tokens.css  utilities.css
frontend/src/test-support/: composer.ts  render.tsx  streams.ts
references/: backend.md  frontend.md
reports/: eval_cache.json  eval_report_1782343062.json  eval_report_1782348510.json  eval_report_1782351232.json  eval_report_1782352364.json  eval_report_1782385238.json  eval_report_1782391280.json  eval_report_1782392046.json  eval_report_1782392226.json  eval_report_1782392253.json  eval_report_1782405776.json  eval_report_1782419114.json  eval_report_1782419531.json  eval_report_1782422444.json  eval_report_1782422507.json  eval_report_1782423074.json  eval_report_1782424211.json  eval_report_1782586119.json  eval_report_1782961156.json  eval_report_1782961772.json  eval_report_1782961943.json  eval_report_1782962183.json  eval_report_1782962396.json  eval_report_1782962765.json  eval_report_1782999225.json  eval_report_1783038536.json  eval_report_1783039141.json  eval_report_1783081551.json  eval_report_1783086462.json  eval_report_1783110555.json  eval_report_1783163702.json  eval_report_1783182268.json  eval_report_1783182634.json  eval_report_1783184404.json  eval_report_1783186329.json  eval_report_1783204654.json  eval_report_1783206269.json  eval_report_1783208829.json  eval_report_1783257991.json  eval_report_1783293877.json  (+20 more)
scripts/: eval_trend.py  run_eval.py  seed_dev_data.py
src/: bootstrap.py
src/chat/: __init__.py
src/chat/application/: __init__.py
src/chat/application/ports/: __init__.py  artifact_repository.py  conversation_repository.py  dashboard_view_builder.py  edit_dashboard_port.py  edit_view_builder.py  language_model_port.py  progress_reporter.py  response_content_extractor_port.py  sql_engine_port.py  text2sql_port.py  turn_view_builder.py
src/chat/application/use_cases/: __init__.py  delete_artifact.py  describe_dataset_table.py  edit_artifact.py  list_dataset_tables.py  save_artifact.py  send_message.py  set_artifact_version.py  stream_message.py
src/chat/domain/: __init__.py  errors.py
src/chat/domain/entities/: __init__.py  artifact.py  conversation.py
src/chat/domain/services/: __init__.py  dashboard_widgets.py
src/chat/domain/value_objects/: __init__.py  artifact_summary.py  artifact_version.py  chat_state.py  conversation_summary.py  dashboard_layout.py  message.py  render_tree.py  stream_event.py  sub_query_result.py  text2sql_result.py  view_spec.py  widget.py
src/chat/infrastructure/: __init__.py  cli.py  litellm_language_model.py  response_content_extractor_factory.py  text2sql_graph.py  thinking_blocks_extractor.py  types.py
src/chat/infrastructure/api/: __init__.py  app.py  artifact_edit_router.py  artifact_requests.py  artifacts_router.py  chat_api.py  chat_request.py  (+7 more)
src/identity/: __init__.py
src/identity/application/: __init__.py
src/identity/domain/: __init__.py
src/identity/infrastructure/: __init__.py  types.py
src/shared/domain/: errors.py
src/shared/infrastructure/: settings.py
test/: CLAUDE.md
test/eval/: cases.json  conftest.py  test_cases.py
test/integration/: CLAUDE.md  conftest.py
test/integration/chat/: language_model_chat.feature  test_language_model_chat.py  test_text2sql.py  text2sql.feature
test/unit/: CLAUDE.md
test/unit/architecture/: test_application_has_no_infrastructure_imports.py  test_domain_has_no_framework_imports.py  test_no_cross_component_imports.py  test_no_dataset_identity_in_src.py  test_single_node_protocol.py
test/unit/bootstrap/: test_create_app.py
test/unit/chat/: test_cli.py  test_litellm_language_model.py  test_plain_text_extractor.py  test_response_content_extractor.py  test_response_content_extractor_factory.py  test_thinking_blocks_extractor.py
test/unit/scripts/: test_eval_trend.py  test_run_eval.py
(+202 files in other folders)
