[project]
name = "datastudio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.137.1",
    "uvicorn>=0.34",
    "langchain==1.3.9",
    "langchain-litellm>=0.7.0",
    "langgraph==1.2.5",
    "litellm==1.89.1",
    "pydantic-settings>=2.0.0",
    "duckdb>=1.0.0",
]

[project.scripts]
datastudio = "chat.infrastructure.graph.cli:main"
datastudio-api = "bootstrap:run"

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "integration: hits real external APIs — run explicitly with -m integration",
    "eval: end-to-end LLM eval cases — run explicitly with -m eval",
]

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"

[tool.uv]
# semgrep pins click~=8.1.8 and mcp==1.23.3; both have known CVEs
# (PYSEC-2026-2132, CVE-2026-52870/52869/59950) fixed in later releases
# that semgrep hasn't relaxed its own pins to allow yet.
override-dependencies = [
    "click>=8.3.3",
    "mcp>=1.28.1",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
# D: pydocstyle  E/W: pycodestyle  F: pyflakes  I: isort  B: bugbear  UP: pyupgrade  N: pep8-naming
select = ["D", "E", "W", "F", "I", "B", "UP", "N"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Test method names are self-documenting; adding docstrings to every test
# would be pure boilerplate noise. Module/package docstrings (D100/D104) are
# still valuable but also suppressed here so test packages stay clutter-free.
"test/**/*.py" = ["D"]

[tool.bandit]
targets = ["src"]
# pre-commit hook passes -ll (report LOW severity and above); keep in sync if changing

[tool.vulture]
min_confidence = 80
paths = ["src"]

[tool.radon]
# Thresholds enforced by xenon in pre-commit; this section controls `radon cc` CLI defaults
cc_min = "A"
show_complexity = true
average = true

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/test*", "*/__pycache__/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.mutmut]
source_paths = ["src/"]
# -x: bail on first failure per mutant (speed)  -q/--no-header: suppress noise
pytest_add_cli_args = ["-x", "-q", "--no-header"]
pytest_add_cli_args_test_selection = ["test/unit/"]

[tool.deptry]
# DEP002: fastapi/langchain/litellm are runtime deps pulled transitively or via entrypoint
# DEP003: langchain_core/pydantic are transitive deps imported directly — acceptable
# DEP004: pytest/pytest_bdd in test files are dev deps used as intended
ignore = ["DEP002", "DEP003", "DEP004"]

# Architectural boundaries — run with `PYTHONPATH=src uv run lint-imports` (see
# Makefile `arch` target and the import-linter pre-commit hook). lint-imports
# does not read pytest's `pythonpath`, so src must be on PYTHONPATH.
[tool.importlinter]
root_packages = ["chat", "identity", "shared"]
# Required so the "Domain imports no framework" forbidden contract can name
# external packages (langchain, duckdb, …) as forbidden targets.
include_external_packages = true

# Bounded contexts: chat/identity share ids via the shared kernel and are wired
# at bootstrap.py; they never import each other, and shared depends on neither.
# Siblings joined by `|` cannot import each other; the upper layer may import
# the lower (chat/identity -> shared) but not the reverse.
[[tool.importlinter.contracts]]
name = "Components stay decoupled (share ids via the shared kernel)"
type = "layers"
layers = ["chat | identity", "shared"]

# Clean Architecture rings, enforced inside every component: infrastructure may
# import application may import domain — never the reverse. Covers the old
# "application imports no infrastructure" test and adds the domain direction.
[[tool.importlinter.contracts]]
name = "Layers point inward (infrastructure > application > domain)"
type = "layers"
# `application` is parenthesized (optional): shared has no application layer, so
# the contract skips it there while still enforcing it in chat/identity.
layers = ["infrastructure", "(application)", "domain"]
containers = ["chat", "identity", "shared"]

# The domain ring imports no framework. pydantic is intentionally omitted from
# the forbidden list (serialization boundary sanctioned by CLAUDE.md).
[[tool.importlinter.contracts]]
name = "Domain imports no framework"
type = "forbidden"
source_modules = ["chat.domain", "identity.domain", "shared.domain"]
forbidden_modules = [
    "langchain", "langchain_core", "langgraph", "fastapi", "starlette",
    "sse_starlette", "duckdb", "litellm", "uvicorn",
]

[dependency-groups]
dev = [
    "bandit==1.9.4",
    "deptry==0.25.1",
    "import-linter==2.11",
    "mutmut==3.6.0",
    "pre-commit>=4.0.0",
    "pyright==1.1.410",
    "pytest==9.1.0",
    "pytest-bdd==8.1.0",
    "pytest-cov==7.1.0",
    "radon==6.0.1",
    "ruff==0.15.17",
    "semgrep==1.166.0",
    "vulture==2.16",
    "xenon==0.9.3",
]
